--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^5.3.3",
     "emailjs-com": "^2.6.4",
     "react": "^17.0.1",
+    "react-chatbot-kit": "^2.2.2",
     "react-dom": "^17.0.1",
     "react-scripts": "^5.0.1",
     "smooth-scroll": "^16.1.3"
